# lazyfetch

./: Cargo.toml  flake.nix  result  rust-toolchain.toml
.github/workflows/: build.yml  check.yml
src/: colors.rs  config.rs  error.rs  main.rs  utils.rs
src/assets/: linux  mod.rs  nixos
src/assets/ascii/: nixos
src/config/: cli.rs  default.toml  file.rs  mod.rs
src/info/: cpu.rs  disk.rs  gpu.rs  host.rs  kernel.rs  memory.rs  mod.rs  os.rs  parse.rs  shell.rs  system.rs  uptime.rs  user.rs  username.rs  vars.rs  wm.rs
