[package]
name = "lazyfetch"
version = "0.0.0"
edition = "2021"
description = "🚀 The faster neofetch-like for get information about your system, written in rust 🚀"
authors = ["Thenat"]
homepage = "https://github.com/thenatx/lazyfetch"
repository = "https://github.com/thenatx/lazyfetch"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
toml = "0.8.14"

