[package]
name = "lazyfetch"
version = "0.0.0"
edition = "2021"
description = "A neofetch-like for get information about your system, written in rust"
authors = ["Thenat"]
homepage = "https://github.com/thenatx/lazyfetch"
repository = "https://github.com/thenatx/lazyfetch"

[dependencies]
clap = { version = "4.5.7", features = ["derive"] }
serde = { version = "1.0.203", features = ["derive"] }
directories = "5.0.1"
starbase_shell = "0.5.0"
toml = "0.8.14"
sysinfo = "0.30.13"
regex = "1.10.5"
termion = "4.0.2"
unicode-width = "0.2.0"
